Added new updated files and stop criteria k means

--- a/HW3/hw3.ipynb
+++ b/HW3/hw3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "[10000 rows x 785 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,13 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Euclidean SSE: 33124176165'"
+       "0"
       ]
      },
      "metadata": {},
@@ -397,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "'Cosine SSE: 30495478362'"
+       "0"
       ]
      },
      "metadata": {},
@@ -406,11 +406,259 @@
     {
      "data": {
       "text/plain": [
-       "'Jaccard SSE: 27440904520'"
+       "0"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\CSE 572\\CSE-572\\HW3\\hw3.ipynb Cell 3\u001b[0m line \u001b[0;36m1\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=107'>108</a>\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(X, y, test_size\u001b[39m=\u001b[39m\u001b[39m0.2\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m42\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=109'>110</a>\u001b[0m train_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([X_train, y_train], axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m--> <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=111'>112</a>\u001b[0m euclidean_centroids, euclidean_sse \u001b[39m=\u001b[39m kmeans(train_df, \u001b[39m3\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39meuclidean\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=112'>113</a>\u001b[0m display(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mEuclidean SSE: \u001b[39m\u001b[39m{\u001b[39;00meuclidean_sse\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=114'>115</a>\u001b[0m cosine_centroids, cosine_sse \u001b[39m=\u001b[39m kmeans(train_df, \u001b[39m3\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mcosine\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;32mc:\\CSE 572\\CSE-572\\HW3\\hw3.ipynb Cell 3\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m \u001b[39mfor\u001b[39;00m index, row \u001b[39min\u001b[39;00m changed_rows\u001b[39m.\u001b[39miterrows():\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m     \u001b[39mfor\u001b[39;00m col \u001b[39min\u001b[39;00m centroids\u001b[39m.\u001b[39mcolumns:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m         curr_max_diff \u001b[39m=\u001b[39m \u001b[39mmax\u001b[39m(\u001b[39mabs\u001b[39m(row[col] \u001b[39m-\u001b[39m new_centroids\u001b[39m.\u001b[39;49mat[index, col]), curr_max_diff)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m         \u001b[39m'''\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m        if abs(row[col] - new_centroids.at[index, col]) > 1:\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m \u001b[39m            print(f\"Row {index}, Column {col} changed from {centroids.at[index, col]} to {new_centroids.at[index, col]}\")\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m \u001b[39m        '''\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/CSE%20572/CSE-572/HW3/hw3.ipynb#W2sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m np\u001b[39m.\u001b[39mnot_equal(centroids\u001b[39m.\u001b[39mvalues, new_centroids\u001b[39m.\u001b[39mvalues)\u001b[39m.\u001b[39many():\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\indexing.py:2275\u001b[0m, in \u001b[0;36m_AtIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2272\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mInvalid call for scalar access (getting)!\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   2273\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj\u001b[39m.\u001b[39mloc[key]\n\u001b[1;32m-> 2275\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__getitem__\u001b[39;49m(key)\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python310\\site-packages\\pandas\\core\\indexing.py:2213\u001b[0m, in \u001b[0;36m_ScalarAccessIndexer.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2212\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__getitem__\u001b[39m(\u001b[39mself\u001b[39m, key):\n\u001b[1;32m-> 2213\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39;49m(key, \u001b[39mtuple\u001b[39;49m):\n\u001b[0;32m   2214\u001b[0m \n\u001b[0;32m   2215\u001b[0m         \u001b[39m# we could have a convertible item here (e.g. Timestamp)\u001b[39;00m\n\u001b[0;32m   2216\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m is_list_like_indexer(key):\n\u001b[0;32m   2217\u001b[0m             key \u001b[39m=\u001b[39m (key,)\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -419,17 +667,36 @@
     "\n",
     "    # Ensure initial centroids have distinct labels\n",
     "    while True:\n",
+    "        '''\n",
     "        indices = np.random.choice(len(X), k, replace=False)\n",
     "        centroids = X.iloc[indices]\n",
+    "        '''\n",
+    "        centroids = []\n",
+    "        centroids.append(X.sample(1).iloc[0])\n",
+    "        for _ in range(k - 1):\n",
+    "            distances = cdist(X, centroids, metric='euclidean')\n",
+    "            min_distances = np.min(distances, axis=1)\n",
+    "            next_centroid = X.iloc[np.argmax(min_distances)]\n",
+    "            centroids.append(next_centroid)\n",
+    "\n",
+    "        centroids = pd.DataFrame(centroids)\n",
+    "\n",
     "        if centroids['label'].nunique() == k:\n",
     "            break\n",
+    "        \n",
+    "\n",
     "\n",
     "    assign_to_label = {i: label for i, label in enumerate(centroids['label'])}\n",
     "    centroids = centroids.reset_index(drop=True)\n",
     "\n",
+    "\n",
     "    iterations = 0\n",
-    "    while iterations < 5:\n",
-    "        X_array = X.values[:, :-1]\n",
+    "    sse = 0\n",
+    "    curr_max_diff = 0\n",
+    "    prior_max_diff = 0\n",
+    "    priorX = pd.DataFrame()\n",
+    "    X_array = X.values[:, :-1]\n",
+    "    while True:\n",
     "        centroids_array = centroids.values[:, :-1]\n",
     "\n",
     "        if method == \"euclidean\":\n",
@@ -442,6 +709,7 @@
     "\n",
     "        assign = np.argmin(distances, axis=1)\n",
     "        labels = [assign_to_label[i] for i in assign]\n",
+    "\n",
     "        X['label'] = labels\n",
     "\n",
     "        new_centroids = X.groupby('label').mean().round(0).astype(int).reset_index()\n",
@@ -449,31 +717,49 @@
     "        new_centroids['label'] = new_centroids['label'].astype(int)\n",
     "        new_centroids = pd.concat([new_centroids.drop('label', axis=1), new_centroids['label']], axis=1)\n",
     "\n",
-    "        if centroids.sort_values(by=list(centroids.columns)).equals(new_centroids.sort_values(by=list(new_centroids.columns))):\n",
-    "            break\n",
-    "        \n",
-    "        # Calculate SSE\n",
-    "        sse = 0\n",
-    "        for i, centroid in enumerate(centroids['label']):\n",
-    "            cluster_points = X[X['label'] == centroid].iloc[:, :-1]\n",
-    "            sse += np.sum((cluster_points.values - centroids.iloc[i, :-1].values) ** 2)\n",
-    "\n",
-    "        centroids = new_centroids\n",
-    "        new_centroids = pd.DataFrame()\n",
-    "        iterations += 1\n",
-    "    \n",
-    "        \n",
-    "        '''\n",
     "        changed_rows = centroids[centroids.ne(new_centroids).any(axis=1)]\n",
     "        # Iterate over changed rows and columns\n",
     "        \n",
     "        for index, row in changed_rows.iterrows():\n",
     "            for col in centroids.columns:\n",
-    "                if row[col] != new_centroids.at[index, col]:\n",
+    "                curr_max_diff = max(abs(row[col] - new_centroids.at[index, col]), curr_max_diff)\n",
+    "                '''\n",
+    "                if abs(row[col] - new_centroids.at[index, col]) > 1:\n",
     "                    print(f\"Row {index}, Column {col} changed from {centroids.at[index, col]} to {new_centroids.at[index, col]}\")\n",
-    "        '''\n",
+    "                '''\n",
     "\n",
+    "        if not np.not_equal(centroids.values, new_centroids.values).any():\n",
+    "            display(\"made it\")\n",
+    "            break\n",
     "        \n",
+    "        '''\n",
+    "        if centroids.sort_values(by=list(centroids.columns)).equals(new_centroids.sort_values(by=list(new_centroids.columns))):\n",
+    "            display(\"made it\")\n",
+    "            break\n",
+    "        '''\n",
+    "        \n",
+    "        '''\n",
+    "        if np.allclose(centroids.values, new_centroids.values, atol=150):\n",
+    "            break\n",
+    "        '''\n",
+    "        \n",
+    "        '''\n",
+    "        if prior_max_diff == curr_max_diff:\n",
+    "            break\n",
+    "        '''\n",
+    "            \n",
+    "        prior_max_diff = curr_max_diff\n",
+    "        curr_max_diff = 0\n",
+    "        \n",
+    "        # Calculate SSE\n",
+    "        for i, centroid in enumerate(centroids['label']):\n",
+    "            cluster_points = X[X['label'] == centroid].iloc[:, :-1]\n",
+    "            sse += np.sum((cluster_points.values - centroids.iloc[i, :-1].values) ** 2)\n",
+    "\n",
+    "\n",
+    "        centroids = new_centroids\n",
+    "        new_centroids = pd.DataFrame()\n",
+    "        iterations += 1\n",
     "\n",
     "    return centroids, sse\n",
     "\n",
@@ -559,6 +845,103 @@
     "\n",
     "jaccard_accuracy = kmeans_fit_predict(test_df, jaccard_centroids, \"jaccard\")\n",
     "display(f\"Jaccard Accuracy: {jaccard_accuracy}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stop_criteria_kmeans(data, k, method):\n",
+    "    X = data.copy()\n",
+    "\n",
+    "    # Ensure initial centroids have distinct labels\n",
+    "    while True:\n",
+    "        indices = np.random.choice(len(X), k, replace=False)\n",
+    "        centroids = X.iloc[indices]\n",
+    "        if centroids['label'].nunique() == k:\n",
+    "            break\n",
+    "\n",
+    "    assign_to_label = {i: label for i, label in enumerate(centroids['label'])}\n",
+    "    centroids = centroids.reset_index(drop=True)\n",
+    "\n",
+    "    iterations = 0\n",
+    "    sse = 0\n",
+    "    while iterations:\n",
+    "        X_array = X.values[:, :-1]\n",
+    "        centroids_array = centroids.values[:, :-1]\n",
+    "\n",
+    "        if method == \"euclidean\":\n",
+    "            # distances = np.linalg.norm(X.values[:, np.newaxis, :-1] - centroids.values[:, :-1], axis=2)\n",
+    "            distances = cdist(X_array, centroids_array, metric='euclidean')\n",
+    "        elif method == \"cosine\":\n",
+    "            distances = cdist(X_array, centroids_array, metric='cosine')\n",
+    "        else:\n",
+    "            distances = cdist(X_array, centroids_array, metric='jaccard')\n",
+    "\n",
+    "        assign = np.argmin(distances, axis=1)\n",
+    "        labels = [assign_to_label[i] for i in assign]\n",
+    "        X['label'] = labels\n",
+    "\n",
+    "        new_centroids = X.groupby('label').mean().round(0).astype(int).reset_index()\n",
+    "        new_centroids.columns.name = None  # Remove the label from the columns\n",
+    "        new_centroids['label'] = new_centroids['label'].astype(int)\n",
+    "        new_centroids = pd.concat([new_centroids.drop('label', axis=1), new_centroids['label']], axis=1)\n",
+    "\n",
+    "        changed_rows = centroids[centroids.ne(new_centroids).any(axis=1)]\n",
+    "        # Iterate over changed rows and columns\n",
+    "        \n",
+    "        for index, row in changed_rows.iterrows():\n",
+    "            for col in centroids.columns:\n",
+    "                curr_max_diff = max(abs(row[col] - new_centroids.at[index, col]), curr_max_diff)\n",
+    "                '''\n",
+    "                if abs(row[col] - new_centroids.at[index, col]) > 1:\n",
+    "                    print(f\"Row {index}, Column {col} changed from {centroids.at[index, col]} to {new_centroids.at[index, col]}\")\n",
+    "                '''\n",
+    "        \n",
+    "        '''\n",
+    "        if centroids.sort_values(by=list(centroids.columns)).equals(new_centroids.sort_values(by=list(new_centroids.columns))):\n",
+    "            break\n",
+    "        '''\n",
+    "        '''\n",
+    "        if np.allclose(centroids.values, new_centroids.values, atol=153):\n",
+    "            display(\"made it\")\n",
+    "            break\n",
+    "        '''\n",
+    "    \n",
+    "        if prior_max_diff == curr_max_diff:\n",
+    "            break\n",
+    "            \n",
+    "        prior_max_diff = curr_max_diff\n",
+    "        curr_max_diff = 0\n",
+    "        \n",
+    "        # Calculate SSE\n",
+    "        for i, centroid in enumerate(centroids['label']):\n",
+    "            cluster_points = X[X['label'] == centroid].iloc[:, :-1]\n",
+    "            sse += np.sum((cluster_points.values - centroids.iloc[i, :-1].values) ** 2)\n",
+    "\n",
+    "\n",
+    "        centroids = new_centroids\n",
+    "        new_centroids = pd.DataFrame()\n",
+    "        iterations += 1\n",
+    "\n",
+    "    return centroids, sse\n",
+    "\n",
+    "y = df['label']\n",
+    "X = df.drop('label', axis=1)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "train_df = pd.concat([X_train, y_train], axis=1)\n",
+    "\n",
+    "euclidean_centroids, euclidean_sse = kmeans(train_df, 3, \"euclidean\")\n",
+    "display(f\"Euclidean SSE: {euclidean_sse}\")\n",
+    "\n",
+    "cosine_centroids, cosine_sse = kmeans(train_df, 3, \"cosine\")\n",
+    "display(f\"Cosine SSE: {cosine_sse}\")\n",
+    "\n",
+    "jaccard_centroids, jaccard_sse = kmeans(train_df, 3, \"jaccard\")\n",
+    "display(f\"Jaccard SSE: {jaccard_sse}\")"
    ]
   },
   {
